2005-07-22  Sam Steingold  <sds@gnu.org>

	* makemake.in (clisp.1, clisp.html): substitute ${host} (on unix)
	or ${TSYS} (on win32) for @PLATFORM@
	* doc/Makefile (FILLIN): do not substitute @PLATFORM@ here

2005-07-21  Sam Steingold  <sds@gnu.org>

	* win32.d (HAVE_STRERROR): define to 1 to avoid a warning

2005-07-21  Sam Steingold  <sds@gnu.org>

	* subtypep.lisp (get-charset-range): do not fill the cache here

2005-07-21  Sam Steingold  <sds@gnu.org>

	* utils/fix-perms.sh: follow symlinks and also "-x" HTML and PNG

2005-07-21  Sam Steingold  <sds@gnu.org>

	* makemake.in (distrib) [cygwin]: fixed CLISP_VR; use /tmp for DEST_TMP
	do not put curr/prev/test into setup.hint - normally they are not needed

2005-07-21  Sam Steingold  <sds@gnu.org>

	* modules/clx/mit-clx/link.sh (TO_LOAD): removed split-sequence
	* modules/clx/mit-clx/Makefile (ALLLISP, ALLFAS): ditto

2005-07-20  Sam Steingold  <sds@gnu.org>

	* version.sh: clisp 2.34 release

2005-07-20  Sam Steingold  <sds@gnu.org>

	* makemake.in (VERSION): removed

2005-07-20  Sam Steingold  <sds@gnu.org>

	* lispbibl.d: do not put "var" into clisp.h

2005-07-20  Sam Steingold  <sds@gnu.org>

	* m4/libtool.m4: upgrade to libtool-1.5.18 + clisp 2005-07-08 patch

2005-07-20  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (var): do not put into clisp.h
	(elif, loop, until): deprecated

2005-07-20  Sam Steingold  <sds@gnu.org>

	* Makefile.devel: remove the last vestiges of DOS support
	updated release procedure
	* clisp.spec: ditto

2005-07-20  Sam Steingold  <sds@gnu.org>

	* utils/fix-perms.sh: make configure files executable

2005-07-18  Sam Steingold  <sds@gnu.org>

	* spvw.d (usage): made the message more consistent

2005-07-15  Sam Steingold  <sds@gnu.org>

	* utils/varbrace.d (convert): declare static to avoid a warning

2005-07-15  Sam Steingold  <sds@gnu.org>

	* modules/berkeley-db/bdb.c: use msgcall and msgfile (Berkeley-DB 4.3)
	(struct messages): new type